--- a/training/nbproject/project.properties
+++ b/training/nbproject/project.properties
@@ -30,9 +30,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.json-simple-1.1.jar=E:\\Bibliotheques_java\\json-simple-1.1.jar
-file.reference.json-simple-1.1.jar-1=D:\\Mes_Programmes\\Java\\json-simple-1.1.jar
 file.reference.postgresql-42.2.4.jar=E:\\Bibliotheques_java\\postgresql-42.2.4.jar
-file.reference.postgresql-42.2.4.jar-1=D:\\Mes_Programmes\\Java\\postgresql-42.2.4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,9 +43,7 @@ javac.classpath=\
     ${libs.jsf20.classpath}:\
     ${libs.primefaces.classpath}:\
     ${file.reference.json-simple-1.1.jar}:\
-    ${file.reference.postgresql-42.2.4.jar}:\
-    ${file.reference.json-simple-1.1.jar-1}:\
-    ${file.reference.postgresql-42.2.4.jar-1}
+    ${file.reference.postgresql-42.2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
